--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,8 @@ Build-Depends: debhelper (>= 9),
                libxmmsclient-glib-dev (>= 0.8),
                pkg-config,
                valac-0.24 (>= 0.24.0),
+               gettext,
+               intltool,
 Standards-Version: 3.9.5
 Homepage: http://abraca.github.com/Abraca/
 Vcs-Git: git://anonscm.debian.org/pkg-xmms2/abraca.git
